[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/scripts/Bullet.gd" type="Script" id=1]
[ext_resource path="res://assets/bulletspawner/projred.png" type="Texture" id=2]
[ext_resource path="res://musics/hit.wav" type="AudioStream" id=3]
[ext_resource path="res://musics/die.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3.58112, 2.04252 )

[node name="Bullet" type="Area2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 0 )
shape = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0

[node name="Die" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="finished" from="Hit" to="." method="_on_Hit_finished"]
[connection signal="finished" from="Die" to="." method="_on_Die_finished"]
